# meltybrain

./: .gitignore  Cargo.toml  build.rs
.cargo/: config.toml
src/: control_logic.rs  hardware.rs  log_messages.rs  logging.rs  main.rs  math.rs  networking.rs  watchdog.rs
src/shared_code/: controller.rs  log_messages.rs  message_format.rs
