[package]
name = "meltybrain"
version = "0.1.0"
authors = ["Olive Prichard <70983271+ChillyCoyote273@users.noreply.github.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
esp-backtrace = { version = "0.14.2", features = [
    "esp32c3",
    "exception-handler",
    "panic-handler",
    "println",
] }
esp-hal = { version = "0.21.1", features = [ "esp32c3"] }
esp-println = { version = "0.12.0", features = ["esp32c3", "log"] }
log = { version = "0.4.22" }
esp-hal-embassy = { version = "0.4.0", features = [ "esp32c3" ] }
embassy-executor = "0.6.1"
embassy-sync = "0.6.0"
static_cell = "2.1.0"
embedded-io-async = "0.6.1"
embassy-futures = "0.1.1"
embassy-time = "0.3.2"

[profile.dev]
# Rust debug is too slow.
# For debug builds always builds with some optimization
opt-level = "s"

[profile.release]
codegen-units = 1 # LLVM can perform better optimizations using a single thread
debug = 2
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 's'
overflow-checks = false
